# vcpkgTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  vcpkgTest.sln  vcpkgTest.vcxproj  vcpkgTest.vcxproj.filters
scripts/: setup-dev.txt
src/: main.cpp
